--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install",
-    "start": "nodemon index.js",
-    "dev": "node index.js",
+    "start": "node index.js",
     "preinstall": "npm install -g npm@9.8.1"
   },
   "author": "",
