--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.10",
     "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "mongoose": "^6.5.0",
     "node-cron": "^3.0.1",
+    "node-gyp": "^9.0.0",
     "nodemailer": "^6.7.7",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.18",
-    "puppeteer": "^10.4.0",
+    "puppeteer": "^15.3.2",
+    "puppeteer-core": "^15.3.2",
     "request": "^2.88.2",
     "wkhtmltopdf": "^0.4.0"
   }
